# py_game_scripts

./: .gitignore  README.md  requirements.txt  requirements_en.txt
docker/: Dockerfile.dev  docker-compose.dev.yml
game_platform/: __init__.py  config.py  logger.py  pyproject.toml
game_platform/adb/: __init__.py  device.py  scanner.py
game_platform/gui/: __init__.py  batch_verification_dialog.py  control_panel.py  device_config.py  device_manager.py  log_viewer.py  main_window.py  multi_device_task_panel.py  settings_dialog.py  task_config.py  verification_dialog.py
game_platform/ocr/: __init__.py  recognizer.py
game_platform/screenshot/: __init__.py  dialog.py  manager.py
game_platform/screenshot/templates/: template.md  templates.json
game_platform/task/: MULTI_DEVICE_GUIDE.md  __init__.py  adb_task.py  base_task.py  device_task_registry.py  examples_multi_device.py  frame_task.py  multi_device_task_manager.py  screenshot_service.py  task_manager.py  task_priority.json  task_runner.py
game_platform/test/: template_tester.py  test_star_detection.py
game_platform/tests/: __init__.py  test_adb.py  test_config.py  test_gui.py  test_ocr.py  test_task.py
platform-tools/platform-tools/: dim.db  zx.db
projects/hero-afk/: .gitignore  LICENSE  build.spec  config.yaml  main.py  pyproject.toml
projects/hero-afk/docs/: MULTI_DEVICE_README.md  PROJECT_INDEX.md  README.md
projects/hero-afk/hero_afk/: __init__.py  _paths.py
projects/hero-afk/hero_afk/config/: task_definitions.json
projects/hero-afk/hero_afk/core/: __init__.py  battle_detector.py  daily_task_manager.py  pixel_checker.py  priority.py  reward_module.py  screen_pilot.py  task_registry.py  task_scheduler.py
projects/hero-afk/hero_afk/gui/: __init__.py  app_window.py  test_mode_dialog.py
projects/hero-afk/hero_afk/tasks/: __init__.py  auto_activity_reward.py  auto_chaos_ranch.py  auto_close_notify.py  auto_dark_realm.py  auto_replace_equipment.py
projects/hero-afk/tests/: __init__.py  test_auto_activity_reward.py
