[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-scripts-platform"
version = "0.1.0"
description = "游戏脚本通用平台 - 提供 ADB、OCR、GUI、任务引擎等基础能力"
requires-python = ">=3.10"

dependencies = [
    "PyQt6>=6.4.0",
    "adb-shell==0.4.4",
    "opencv-python>=4.13.0",
    "numpy>=1.24.0",
    "Pillow==10.0.0",
    "PyYAML==6.0.1",
    "schedule==1.2.0",
    "paddlepaddle>=2.6,<3",
    "paddleocr>=2.8,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
    "pyinstaller",
]
